<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ActualPropertiesDialog</class>
 <widget class="QDialog" name="ActualPropertiesDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1113</width>
    <height>550</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>feature data</string>
  </property>
  <property name="modal">
   <bool>true</bool>
  </property>
  <layout class="QGridLayout" name="gridLayout_3">
   <item row="0" column="0">
    <widget class="QTabWidget" name="tabWidget_selectedFeature">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="tab_observations">
      <attribute name="title">
       <string>observations</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <widget class="QTableView" name="tableView_observation"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_readings">
      <attribute name="title">
       <string>readings</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,1,8">
         <item>
          <widget class="QLabel" name="label_readings">
           <property name="text">
            <string>used reading types:</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QComboBox" name="comboBox_readings"/>
         </item>
         <item>
          <spacer name="horizontalSpacer_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>40</width>
             <height>20</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </item>
       <item>
        <widget class="QTableView" name="tableView_readings"/>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_statistic">
      <attribute name="title">
       <string>statistic</string>
      </attribute>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="3,1">
           <item>
            <widget class="QLabel" name="label_displayFunction">
             <property name="text">
              <string>function statistic:</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QComboBox" name="comboBox_displayedFunction"/>
           </item>
          </layout>
         </item>
         <item>
          <widget class="QTableView" name="tableView_displayedfunctionStatistic"/>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tab_protocol">
      <attribute name="title">
       <string>protocol</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
        <widget class="QTextBrowser" name="textBrowser_protocol"/>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
